# OpenDWM

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
configs/lidar/: lidar_maskgit_layout_ns.json  lidar_vqvae_nwa.json
src/: .gitignore  download_sb3.py
src/dwm/datasets/: common.py  nuscenes.py
src/dwm/models/: crossview_temporal_dit.py
src/dwm/pipelines/: ctsd.py
src/opendwm/: __init__.py
