[project]
name = "opendwm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.4.0",
    "av==14.0.0",
    "bitsandbytes>=0.45.5",
    "botocore>=1.37.30",
    "diffusers==0.31.0",
    "einops>=0.8.1",
    "fsspec>=2025.3.2",
    "ninja>=1.11.1.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "protobuf==4.21.6",
    "pyarrow>=19.0.1",
    "safetensors>=0.5.3",
    "scipy>=1.15.2",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.19.0",
    "torch-fidelity>=0.3.0",
    "torch==2.5.0; sys_platform == 'darwin'",
    "torch==2.5.0+cu124; sys_platform == 'linux'",
    "torchmetrics==1.6.0",
    "tqdm>=4.67.1",
    "transformers==4.48.0",
    "transforms3d>=0.4.2",
    "timm>=1.0.15",
    "rotary-embedding-torch>=0.8.6",
    "opencv-python>=4.11.0.86",
    "wandb>=0.19.9",
    "edict>=0.51",
    "hatchling>=1.27.0",
    "editables>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu124/torch",
]
